# Cognitum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: clock.rs  crdt.rs  lib.rs  membership.rs
crates/network/: Cargo.toml  build.rs
crates/network/proto/: cognitum.proto
crates/network/src/: client.rs  discovery.rs  lib.rs  server.rs
crates/node/: Cargo.toml
crates/node/src/: api.rs  main.rs  models.rs  utils.rs  workers.rs
