# Main executable node for the Cognitum distributed database.
[package]
name = "cognitum-node"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal Modules
cognitum-core = { path = "../core" }
cognitum-network = { path = "../network" }

# Async Runtime & Concurrency
tokio.workspace = true
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP Server & RPC Networking
axum = "0.7"
tonic = "0.11"
reqwest = { version = "0.11", features = ["json"] }

# Serialization & Zero-Copy
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rkyv = "0.7" # Ultra-fast zero-copy serialization for WAL

# Storage, Compression & Caching
lru = "0.12"
lz4_flex = "0.13.0" # Fast LZ4 compression for SSTables

# Metrics & Observability
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Utilities
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }